added link to old portfolio site to show other capabilities

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						</a>
 					</div>
 					<div class="flex-child child-4">
-						<a href="#">
+						<a href="https://andrewwaller.github.io/Adrw4/" target="_blank">
 							<div class="box">
 								<i aria-hidden="true" class="fa fa-html5 fa-5x fa-center"></i>
 							</div>
