too tired, changed img to webp and added text to hero

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					</h1>
 					<hr>
 					<p class="text-box">
-						lol
+						Full time student, part time daydreamer, wannabe app developer, located in Fresno,CA.
 					</p>
 				</div>
 			</div>
