--- a/index.html
+++ b/index.html
@@ -16,44 +16,47 @@
 	<body>
 		<div class="container-fluid hero">
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-lg-12 text-box">
 					<h1 class="text-box text-box-headers">
 						Andrew Waller
 					</h1>
-					<hr>
+					<hr class="awesome">
 					<p class="text-box">
 						Full time student, part time daydreamer, wannabe app developer, located in Fresno,CA.
 					</p>
+					<a href="contact.html">
+						<button type="button" class="btn awesome">Talk to me</button>
+					</a>
 				</div>
 			</div>
 		</div>
 <!------------------------------------------------------------------------------end of hero section-->
-	    <div class="footer">
+	    <div class="futer">
 			<div class="container-fluid external-sites">
 				<div class="flex-parent">
 					<div class="flex-child child-1">
-						<a href="https://www.linkedin.com/in/andrew-waller-b66180146" target="_blank">
+						<a class="awesome" href="https://www.linkedin.com/in/andrew-waller-b66180146" target="_blank">
 							<div class="box">
 								<i class="fa fa-linkedin fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-2">
-						<a href="https://github.com/Adrw4" target="_blank">
+						<a class="awesome" href="https://github.com/Adrw4" target="_blank">
 							<div class="box">
 								<i class="fa fa-github-square fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-3">
-						<a href="https://www.instagram.com/adrw4/?hl=en" target="_blank">
+						<a class="awesome" href="https://www.instagram.com/adrw4/?hl=en" target="_blank">
 							<div class="box">
 								<i class="fa fa-instagram fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-4">
-						<a href="https://andrewwaller.github.io/Adrw4/" target="_blank">
+						<a class="awesome" href="https://andrewwaller.github.io/Adrw4/" target="_blank">
 							<div class="box">
 								<i aria-hidden="true" class="fa fa-html5 fa-5x fa-center"></i>
 							</div>
