almost done with front page

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 	<body>
 		<div class="container-fluid hero">
 			<div class="row">
-				<div class="col-lg-12 text-box">
-					<h1 class="text-box text-box-headers">
+				<div class="col-lg-12 text-box top-pushdown">
+					<h1 class="text-box name">
 						Andrew Waller
 					</h1>
-					<hr class="awesome">
-					<p class="text-box">
+					<div class="awesome underline">
+						_______________________
+					</div>
+					<p class="text-box bio">
 						Full time student, part time daydreamer, wannabe app developer, located in Fresno,CA.
 					</p>
 					<a href="contact.html">
-						<button type="button" class="btn awesome">Talk to me</button>
+						<button type="button" class="btn btn-black awesome">Talk to me</button>
 					</a>
 				</div>
 			</div>
