added contact page, need to finish contact page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						Full time student, part time daydreamer, wannabe app developer, located in Fresno,CA.
 					</p>
 					<a href="contact.html">
-						<button type="button" class="btn btn-black awesome">Talk to me</button>
+						<button type="button" class="btn btn-lg btn-black awesome">Talk to me</button>
 					</a>
 				</div>
 			</div>
@@ -68,7 +68,7 @@
 			</div>
 		</div>
 <!------------------------------------------------------------------------------end of external sites-->
-		<script src="js/jquery-3.2.1.min.js"></script> 
+		<script src="js/jquery-3.2.1.min.js"></script>
 		<script async src="js/bootstrap.min.js"></script>
 <!------------------------------------------------------------------------------end of script-->
 	</body>
