--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,12 @@
 	</head>
 <!------------------------------------------------------------------------------end of head-->
   <body>
-    <div class="container-fluid hero">
+		<div class="btn-home">
+			<a class="awesome" href="index.html">
+				<div>Home</div>
+			</a>
+		</div>
+		<div class="container-fluid hero">
       <div class="row">
         <div class="col-lg-12 text-box top-pushdown">
           <h1 class="text-box name">
@@ -23,9 +28,19 @@
           <div class="awesome underline">
             _______________________
           </div>
-          <a href="index.html">
-            <button type="button" class="btn btn-lg btn-black awesome">Back</button>
-          </a>
+          <button type="button" class="btn btn-lg btn-black awesome" data-toggle="modal" data-target="#myModal">Click Here</button>
+					<!-- Modal -->
+	        <div class="modal fade" id="myModal" role="dialog">
+	          <div class="modal-dialog modal-lg ">
+	            <!-- Modal content-->
+	            <div class="modal-content">
+	              <div class="modal-footer">
+	                <iframe height="600" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none;background: rgba(210,210,155, .65);"  src="https://adrw4.wufoo.com/embed/zda38vg1x2uxns/"><a href="https://adrw4.wufoo.com/forms/zda38vg1x2uxns/"></a></iframe><div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;"><span class="notranslate"></span></div>
+	                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	              </div>
+	            </div>
+	          </div>
+	        </div>
         </div>
       </div>
     </div>
