changed background and did some cross browsser testing to make sure background works with -webkit- and -moz-

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 	</head>
 <!------------------------------------------------------------------------------end of head-->
-  <body>
+  <body style="background-image:url(../img/surf.webp);">
 		<div class="btn-home">
 			<a class="awesome" href="index.html">
 				<div>Home</div>
