--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 	</head>
 <!------------------------------------------------------------------------------end of head-->
-	<body>
+	<body style="background-image:url(../img/surf.webp);">
 		<div class="container-fluid hero">
 			<div class="row">
 				<div class="col-lg-12 text-box top-pushdown">
