updated github link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						</a>
 					</div>
 					<div class="flex-child child-2">
-						<a class="awesome" href="https://github.com/Adrw4" target="_blank">
+						<a class="awesome" href="https://github.com/AndrewWaller" target="_blank">
 							<div class="box">
 								<i class="fa fa-github-square fa-5x"></i>
 							</div>
