Done? just need to make images webp

--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
 					<h1 class="text-box name">
 						Andrew Waller
 					</h1>
-					<div class="awesome underline">
-						_______________________
-					</div>
+					<div class="awesome-background underline"></div>
 					<p class="text-box bio">
-						Full time student, part time daydreamer, wannabe app developer, located in Fresno,CA.
+						Full time student, part time daydreamer, on my way to becoming a front end developer. Located in Fresno,CA.
 					</p>
 					<a href="contact.html">
-						<button type="button" class="btn btn-lg btn-black awesome">Talk to me</button>
+						<button type="button" class="btn btn-lg btn-black awesome-text">Talk to me</button>
 					</a>
 				</div>
 			</div>
@@ -37,28 +35,28 @@
 			<div class="container-fluid external-sites">
 				<div class="flex-parent">
 					<div class="flex-child child-1">
-						<a class="awesome" href="https://www.linkedin.com/in/andrew-waller-b66180146" target="_blank">
+						<a class="awesome-text" href="https://www.linkedin.com/in/andrew-waller-b66180146" target="_blank">
 							<div class="box">
 								<i class="fa fa-linkedin fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-2">
-						<a class="awesome" href="https://github.com/AndrewWaller" target="_blank">
+						<a class="awesome-text" href="https://github.com/AndrewWaller" target="_blank">
 							<div class="box">
 								<i class="fa fa-github-square fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-3">
-						<a class="awesome" href="https://www.instagram.com/adrw4/?hl=en" target="_blank">
+						<a class="awesome-text" href="https://www.instagram.com/adrw4/?hl=en" target="_blank">
 							<div class="box">
 								<i class="fa fa-instagram fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-4">
-						<a class="awesome" href="https://andrewwaller.github.io/Adrw4/" target="_blank">
+						<a class="awesome-text" href="https://andrewwaller.github.io/Adrw4/" target="_blank">
 							<div class="box">
 								<i aria-hidden="true" class="fa fa-html5 fa-5x fa-center"></i>
 							</div>
