--- a/contact.html
+++ b/contact.html
@@ -13,21 +13,22 @@
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 	</head>
 <!------------------------------------------------------------------------------end of head-->
-  <body style="background-image:url(../img/surf.webp);">
+  <body style="background-image:url(img/surf.webp);">
 		<div class="btn-home">
-			<a class="awesome" href="index.html">
+			<a class="awesome-text" href="index.html">
 				<div>Home</div>
 			</a>
 		</div>
-		<div class="col-xs-6"></div>
-		<div class="col-xs-6 contact-text">
+		<div class="col-sm-12 col-md-6" style="padding-left:0px;padding-right:0px;">
+			<img class="profile-picture" src="img/AndrewWaller.jpg" alt="Profile Picture">
+		</div>
+		<div class="col-sm-6 contact-text">
 			<h1 class="text-box name">
 				Let's have a chat
 			</h1>
-			<div class="awesome underline">
-				_______________________  #########
+			<div class="awesome-background underline">
 			</div>
-			<button type="button" class="btn btn-lg btn-black awesome" data-toggle="modal" data-target="#myModal">Click Here</button>
+			<button type="button" class="btn btn-lg btn-black awesome-text" data-toggle="modal" data-target="#myModal">Click Here</button>
 			<!-- Modal -->
 			<div class="modal fade" id="myModal" role="dialog">
 				<div class="modal-dialog modal-lg ">
