contact page done, fixing up small things

--- a/contact.html
+++ b/contact.html
@@ -11,57 +11,47 @@
 		<link href="js/bootstrap.min.js">
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
-		<link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="img/favicons/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
-		<link rel="manifest" href="img/favicons/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
+		<link rel="icon" href="img/parrot_cop.gif" type="image/gif">
 	</head>
 <!------------------------------------------------------------------------------end of head-->
-  <body style="background-image:url(img/surf.webp);">
-		<div class="btn-home">
-			<a class="awesome-text" href="index.html">
-				<div>Home</div>
-			</a>
-		</div>
-		<div class="col-sm-12 col-md-6" style="padding-left:0px;padding-right:0px;">
-			<img class="profile-picture" src="img/AndrewWaller.jpg" alt="Profile Picture">
-		</div>
-		<div class="col-sm-6 contact-text">
-			<h1 class="text-box name">
-				Let's have a chat
-			</h1>
-			<div class="awesome-background underline">
+	<body style="background-image:url(img/surf.webp);">
+		
+		<div class="container-fluid">
+			
+			<div class="row">
+				
+				<div class="col-xs-12 col-lg-8 contact-image" style="padding-left:0px;padding-right:0px;">
+					<img class="profile-picture" src="img/AndrewWaller.jpg" alt="Profile Picture">
+				</div>
+				<div class="col-xs-12 col-lg-4 contact-text">
+					<div class="btn-home">
+				<a class="awesome-text" href="index.html">
+					<div>Home</div>
+				</a>
 			</div>
-			<button type="button" class="btn btn-lg btn-black awesome-text" data-toggle="modal" data-target="#myModal">Click Here</button>
-			<!-- Modal -->
-			<div class="modal fade" id="myModal" role="dialog">
-				<div class="modal-dialog modal-lg ">
-					<!-- Modal content-->
-					<div class="modal-content">
-						<div class="modal-footer">
-							<iframe height="600" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none;background: rgba(210,210,155, .65);"  src="https://adrw4.wufoo.com/embed/zda38vg1x2uxns/"><a href="https://adrw4.wufoo.com/forms/zda38vg1x2uxns/"></a></iframe><div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;"><span class="notranslate"></span></div>
-							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<h1 class="text-box name">
+						Let's have a chat
+					</h1>
+					<div class="awesome-background underline"></div>
+					<button type="button" class="btn btn-lg btn-black awesome-text" data-toggle="modal" data-target="#myModal">Click Here</button>
+					<!--------------------------Modal-------------------------->
+						<div class="modal fade" id="myModal" role="dialog">
+							<div class="modal-dialog modal-lg ">
+					<!--------------------------Modal content---------------->
+								<div class="modal-content">
+									<div class="modal-footer">
+										<iframe height="600" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none;background: rgba(210,210,155, .65);"  src="https://adrw4.wufoo.com/embed/zda38vg1x2uxns/"><a href="https://adrw4.wufoo.com/forms/zda38vg1x2uxns/"></a></iframe><div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;"><span class="notranslate"></span></div>
+										<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+									</div>
+								</div>
+							</div>
 						</div>
-					</div>
 				</div>
 			</div>
 		</div>
 <!------------------------------------------------------------------------------end of hero section-->
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script async src="js/bootstrap.min.js"></script>
+		<script src="js/jquery-3.2.1.min.js"></script>
+		<script async src="js/bootstrap.min.js"></script>
 <!------------------------------------------------------------------------------end of script-->
-</body>
+	</body>
 </html>
