added more sizes and more responsiveness

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 						Let's have a chat
 					</h1>
 					<div class="awesome-background underline"></div>
-					<button type="button" class="btn btn-lg btn-black awesome-text" data-toggle="modal" data-target="#myModal">Click Here</button>
+					<button type="button" class="btn btn-lg btn-black btn-big awesome-text" data-toggle="modal" data-target="#myModal">Click Here</button>
 					<!--------------------------Modal-------------------------->
 						<div class="modal fade" id="myModal" role="dialog">
 							<div class="modal-dialog modal-lg ">
