--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link href="js/bootstrap.min.js">
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
+		<link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
 		<link rel="icon" href="img/parrot_cop.gif" type="image/gif">
 	</head>
 <!------------------------------------------------------------------------------end of head-->
