added bio 2 to contact page and made more responsive through more media query

--- a/contact.html
+++ b/contact.html
@@ -16,20 +16,22 @@
 	</head>
 <!------------------------------------------------------------------------------end of head-->
 	<body style="background-image:url(img/surf.webp);">
-		
 		<div class="container-fluid">
-			
 			<div class="row">
-				
 				<div class="col-xs-12 col-lg-8 contact-image" style="padding-left:0px;padding-right:0px;">
+						<ul class="bio-2">
+							<li>17 years old </li>
+							<li>Recent high school graduate</li>
+							<li>Currently enrolled at Geekwise Academy and Fresno city majoring in CIT</li>
+						</ul>
 					<img class="profile-picture" src="img/AndrewWaller.jpg" alt="Profile Picture">
 				</div>
 				<div class="col-xs-12 col-lg-4 contact-text">
 					<div class="btn-home">
-				<a class="awesome-text" href="index.html">
-					<div>Home</div>
-				</a>
-			</div>
+						<a class="awesome-text" href="index.html">
+							<div>Home</div>
+						</a>
+					</div>
 					<h1 class="text-box name">
 						Let's have a chat
 					</h1>
