--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
 			<div class="container-fluid external-sites">
 				<div class="flex-parent">
 					<div class="flex-child child-1">
-						<a class="awesome-text" href="https://www.linkedin.com/in/andrew-waller-b66180146" target="_blank">
+						<a class="awesome-text" href="https://www.linkedin.com/in/andrew-waller-b66180146" alt="my linkedin account" target="_blank" rel="noopener">
 							<div class="box">
 								<i class="fa fa-linkedin fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-2">
-						<a class="awesome-text" href="https://github.com/AndrewWaller" target="_blank">
+						<a class="awesome-text" href="https://github.com/AndrewWaller" alt=" my github account" target="_blank" rel="noopener">
 							<div class="box">
 								<i class="fa fa-github-square fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-3">
-						<a class="awesome-text" href="https://www.instagram.com/adrw4/?hl=en" target="_blank">
+						<a class="awesome-text" href="https://www.instagram.com/adrw4/?hl=en" alt="my instagram account" target="_blank" rel="noopener">
 							<div class="box">
 								<i class="fa fa-instagram fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-4">
-						<a class="awesome-text" href="https://andrewwaller.github.io/Adrw4/" target="_blank">
+						<a class="awesome-text" href="https://andrewwaller.github.io/Adrw4/" alt="my old portfolio site" target="_blank" rel="noopener">
 							<div class="box">
 								<i aria-hidden="true" class="fa fa-html5 fa-5x fa-center"></i>
 							</div>
