fixed query and changed icons and links

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge" http-equiv="X-UA-Compatible">
 		<meta content="width=device-width, initial-scale=1" name="viewport"><!--for future reference andrew, put all other items in the head under these 3 tags for optimization. Also put scripts in the script section below the footer.-->
-		<title>
-			Andrew Waller
-		</title>
+		<title>AndrewWaller</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="js/bootstrap.min.js">
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
-		<link href='https://fonts.googleapis.com/css?family=Product+Sans' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Product+Sans" rel="stylesheet" type="text/css">
 		<link rel="icon" href="img/parrot_cop.gif" type="image/gif">
 	</head>
 <!------------------------------------------------------------------------------end of head-->
@@ -37,23 +35,23 @@
 			<div class="container-fluid external-sites">
 				<div class="flex-parent">
 					<div class="flex-child child-1">
-						<a class="awesome-text" href="https://www.linkedin.com/in/andrew-waller-b66180146" alt="my linkedin account" target="_blank" rel="noopener">
+						<a class="awesome-text" href="https://andrewwaller.github.io/Restaurante/" alt="Restaurante Site" target="_blank" rel="noopener">
 							<div class="box">
-								<i class="fa fa-linkedin fa-5x"></i>
+								<i class="fa fa-code fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-2">
-						<a class="awesome-text" href="https://github.com/AndrewWaller" alt=" my github account" target="_blank" rel="noopener">
+						<a class="awesome-text" href="https://andrewwaller.github.io/Pet-store/" alt="Pet Store Site" target="_blank" rel="noopener">
 							<div class="box">
-								<i class="fa fa-github-square fa-5x"></i>
+								<i class="fa fa-code fa-5x"></i>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-3">
-						<a class="awesome-text" href="https://www.instagram.com/adrw4/?hl=en" alt="my instagram account" target="_blank" rel="noopener">
+						<a class="awesome-text" href="https://andrewwaller.github.io/Simple-Parallax-Scrolling/" alt="Parallax scrolling site" target="_blank" rel="noopener">
 							<div class="box">
-								<i class="fa fa-instagram fa-5x"></i>
+								<i class="fa fa-code fa-5x"></i>
 							</div>
 						</a>
 					</div>
