added hover effect to external sites

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge" http-equiv="X-UA-Compatible">
 		<meta content="width=device-width, initial-scale=1" name="viewport"><!--for future reference andrew, put all other items in the head under these 3 tags for optimization. Also put scripts in the script section below the footer.-->
-		<title>AndrewWaller</title>
+		<title>Andrew Waller</title>
+		<link rel="manifest" href="/manifest.json">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="js/bootstrap.min.js">
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -37,7 +38,10 @@
 					<div class="flex-child child-1">
 						<a class="awesome-text" href="https://andrewwaller.github.io/Restaurante/" alt="Restaurante Site" target="_blank" rel="noopener">
 							<div class="box">
-								<i class="fa fa-code fa-5x"></i>
+								<i class="fa fa-css3 fa-5x"></i>
+								<div class="overlay">
+									<p class="text-box box-2">Restaurante Site</p>
+								</div>
 							</div>
 						</a>
 					</div>
@@ -45,20 +49,29 @@
 						<a class="awesome-text" href="https://andrewwaller.github.io/Pet-store/" alt="Pet Store Site" target="_blank" rel="noopener">
 							<div class="box">
 								<i class="fa fa-code fa-5x"></i>
+								<div class="overlay">
+									<p class="text-box box-2">Pet Store Site</p>
+								</div>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-3">
 						<a class="awesome-text" href="https://andrewwaller.github.io/Simple-Parallax-Scrolling/" alt="Parallax scrolling site" target="_blank" rel="noopener">
 							<div class="box">
-								<i class="fa fa-code fa-5x"></i>
+								<i class="fa fa-cog fa-spin fa-5x"></i>
+								<div class="overlay">
+									<p class="text-box box-2">Parallax scrolling</p>
+								</div>
 							</div>
 						</a>
 					</div>
 					<div class="flex-child child-4">
-						<a class="awesome-text" href="https://andrewwaller.github.io/Adrw4/" alt="my old portfolio site" target="_blank" rel="noopener">
+						<a class="awesome-text" href="https://andrewwaller.github.io/Adrw4/" alt="My old portfolio site" target="_blank" rel="noopener">
 							<div class="box">
 								<i aria-hidden="true" class="fa fa-html5 fa-5x fa-center"></i>
+								<div class="overlay">
+									<p class="text-box box-2">My old portfolio</p>
+								</div>
 							</div>
 						</a>
 					</div>
