--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	</head>
 <!------------------------------------------------------------------------------end of head-->
 	<body style="background-image:url(../img/surf.webp);">
-		
 		<section class="home">
 			<div class="row">
 				<div class="col-lg-12 text-box first-sect">
@@ -46,11 +45,11 @@
 				<img class="profile-picture" src="img/AndrewWaller.jpg" alt="Profile Picture">
 			</div>
 		</section>
-	    <section class="my-work">
-	    	<div>
-	    		<h1 class="text-box name-3">My Work</h1>
-	    		<div class="awesome-background underline"></div>
-	    	</div>
+    <section class="my-work">
+    	<div>
+    		<h1 class="text-box name-3">My Work</h1>
+    		<div class="awesome-background underline"></div>
+    	</div>
 			<div class="container-fluid external-sites">
 				<div class="flex-parent">
 					<div class="flex-child child-1">
@@ -102,7 +101,7 @@
 					Let's have a chat
 				</h1>
 				<div class="awesome-background underline"></div>
-				<button type="button" class="btn btn-lg btn-black btn-big awesome-text" data-toggle="modal" data-target="#myModal">Click Here</button>
+				<button type="button" class="btn btn-lg btn-black btn-contact awesome-text" data-toggle="modal" data-target="#myModal">Click Here</button>
 			</div>
 			<div class="modal fade" id="myModal" role="dialog">
 				<div class="modal-dialog modal-lg ">
@@ -114,6 +113,13 @@
 					</div>
 				</div>
 			</div>
+		</section>
+		<section class="social-media">
+			<i aria-hidden="true" class="fa fa-facebook fa-5x"></i>
+			<i aria-hidden="true" class="fa fa-instagram fa-5x"></i>
+			<i aria-hidden="true" class="fa fa-snapchat fa-5x"></i>
+			<i aria-hidden="true" class="fa fa-github fa-5x"></i>
+			<i aria-hidden="true" class="fa fa-linkedin fa-5x"></i>
 		</section>
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script async src="js/bootstrap.min.js"></script>
