worked on social media links, decided to drop fa and use custo icons instead, did not remove fa yet tho

--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
 			</div>
 		</section>
 		<section class="social-media">
-			<i aria-hidden="true" class="fa fa-facebook fa-5x"></i>
-			<i aria-hidden="true" class="fa fa-instagram fa-5x"></i>
-			<i aria-hidden="true" class="fa fa-snapchat fa-5x"></i>
-			<i aria-hidden="true" class="fa fa-github fa-5x"></i>
-			<i aria-hidden="true" class="fa fa-linkedin fa-5x"></i>
+			<i aria-hidden="true" class="fb"></i>
+			<i aria-hidden="true" class="ig"></i>
+			<i aria-hidden="true" class="sc"></i>
+			<i aria-hidden="true" class="gh"></i>
+			<i aria-hidden="true" class="in"></i>
 		</section>
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script async src="js/bootstrap.min.js"></script>
