fixed social icons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					</h1>
 					<div class="awesome-background underline"></div>
 					<p class="text-box bio">
-						Full time student, part time daydreamer, on my way to becoming a front end developer. Located in Fresno,CA.
+						Full time student,<br> part time daydreamer,<br> on my way to becoming a front end developer.<br> Located in Fresno,CA.
 					</p>
 					<a href="#about">
 						<button type="button" class="btn btn-lg-bottom btn-black awesome-text">
@@ -33,7 +33,7 @@
 			</div>
 		</section>
 		<section class="about-me" id="about">
-			<div class="col-xs-12 col-lg-8 contact-image" style="padding-left:0px;padding-right:0px;">
+			<div class="col-xs-12 contact-image" style="padding-left:0px;padding-right:0px;">
 				<h1 class="text-box name-2">About Me</h1>
 				<div class="awesome-background underline"></div>
 				<ul class="bio-2">
@@ -95,7 +95,7 @@
 			</div>
 		</section>
 		<section class="contact">
-			<div class="col-xs-12 col-lg-4 contact-text">
+			<div class="col-xs-12 contact-text">
 				<h1 class="text-box name">
 					Let's have a chat
 				</h1>
@@ -114,11 +114,21 @@
 			</div>
 		</section>
 		<section class="social-media">
-			<i aria-hidden="true" class="fb"></i>
-			<i aria-hidden="true" class="ig"></i>
-			<i aria-hidden="true" class="sc"></i>
-			<i aria-hidden="true" class="gh"></i>
-			<i aria-hidden="true" class="in"></i>
+			<div class="contact-logos">
+				<img src="img/FB.png" class="fb" alt="">
+			</div>
+			<div class="contact-logos">
+				<img src="img/IG.png" class="ig" alt="">
+			</div>
+			<div class="contact-logos">
+				<img src="img/SC.png" class="sc" alt="">
+			</div>
+			<div class="contact-logos">
+				<img src="img/GH.png" class="gh" alt="">
+			</div>
+			<div class="contact-logos">
+				<img src="img/IN.png" class="in" alt="">
+			</div>
 		</section>
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script async src="js/bootstrap.min.js"></script>
