worked on links for contact

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Product+Sans" rel="stylesheet" type="text/css">
-		<link rel="icon" href="img/parrot_cop.gif" type="image/gif">
 	</head>
 <!------------------------------------------------------------------------------end of head-->
 	<body style="background-image:url(../img/surf.webp);">
@@ -114,21 +113,21 @@
 			</div>
 		</section>
 		<section class="social-media">
-			<div class="contact-logos">
+			<a href="#" class="contact-logos">
 				<img src="img/FB.png" class="fb" alt="">
-			</div>
-			<div class="contact-logos">
+			</a>
+			<a href="https://www.instagram.com/adrw4/?hl=en" class="contact-logos">
 				<img src="img/IG.png" class="ig" alt="">
-			</div>
-			<div class="contact-logos">
+			</a>
+			<a class="contact-logos">
 				<img src="img/SC.png" class="sc" alt="">
-			</div>
-			<div class="contact-logos">
+			</a>
+			<a href="https://github.com/AndrewWaller" class="contact-logos">
 				<img src="img/GH.png" class="gh" alt="">
-			</div>
-			<div class="contact-logos">
-				<img src="img/IN.png" class="in" alt="">
-			</div>
+			</a>
+			<a href="https://www.linkedin.com/in/andrew-waller-b66180146/" class="contact-logos">
+				<img src="img/LN.png" class="ln" alt="">
+			</a>
 		</section>
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script async src="js/bootstrap.min.js"></script>
