--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Product+Sans" rel="stylesheet" type="text/css">
+
 	</head>
 <!------------------------------------------------------------------------------end of head-->
 	<body style="background-image:url(../img/surf.webp);">
@@ -113,23 +113,27 @@
 			</div>
 		</section>
 		<section class="social-media">
-			<a href="#" class="contact-logos">
-				<img src="img/FB.png" class="fb" alt="">
+			<a href="https://www.facebook.com/andrew.waller.adrw4" class="contact-logos" target="_blank">
+				<img src="img/FB.png" class="sm" alt="">
 			</a>
-			<a href="https://www.instagram.com/adrw4/?hl=en" class="contact-logos">
-				<img src="img/IG.png" class="ig" alt="">
+			<a href="https://www.instagram.com/adrw4/?hl=en" class="contact-logos" target="_blank">
+				<img src="img/IG.png" class="sm" alt=""/>
 			</a>
-			<a class="contact-logos">
-				<img src="img/SC.png" class="sc" alt="">
+
+			<a id="snap" rel="tooltip" title="" >
+				<img src="img/SC.png" class="sm"/>
 			</a>
-			<a href="https://github.com/AndrewWaller" class="contact-logos">
-				<img src="img/GH.png" class="gh" alt="">
+
+			<a href="https://github.com/AndrewWaller" class="contact-logos" target="_blank">
+				<img src="img/GH.png" class="sm" alt="">
 			</a>
-			<a href="https://www.linkedin.com/in/andrew-waller-b66180146/" class="contact-logos">
-				<img src="img/LN.png" class="ln" alt="">
+			<a href="https://www.linkedin.com/in/andrew-waller-b66180146/" class="contact-logos" target="_blank">
+				<img src="img/LN.png" class="sm" alt="">
 			</a>
 		</section>
 		<script src="js/jquery-3.2.1.min.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+		<script src="js/scripts.js"></script>
 		<script async src="js/bootstrap.min.js"></script>
 <!------------------------------------------------------------------------------end of script-->
 	</body>
