going to redo all javasript on the site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body style="background-image:url(../img/surf.webp);">
 		<section class="home">
 			<div class="row">
-				<div class="col-lg-12 text-box first-sect">
+				<div class="col-xs-12 text-box first-sect">
 					<h1 class="text-box name">
 						Andrew Waller
 					</h1>
@@ -35,7 +35,7 @@
 				<h1 class="text-box name-2">About Me</h1>
 				<div class="awesome-background underline"></div>
 				<ul class="bio-2">
-					<li>17 years old </li>
+					<li>18 years old </li>
 					<li>Recent high school graduate</li>
 					<li>Currently enrolled at Geekwise Academy and Fresno city majoring in CIT</li>
 				</ul>
@@ -118,9 +118,8 @@
 			<a href="https://www.instagram.com/adrw4/?hl=en" class="contact-logos" target="_blank">
 				<img src="img/IG.png" class="sm" alt=""/>
 			</a>
-			<a id="snapParent">
-				<img src="img/SC.png" class="sm" id="Generate1" onClick="showLoad()" alt="">
-				<img style="display:none;" src="img/snapcode.svg">
+			<a>
+				<img src="img/SC.png" class="sm" id="snapchatLogo" onclick="snapchatPngFlip()" alt="">
 			</a>
 			<a href="https://github.com/AndrewWaller" class="contact-logos" target="_blank">
 				<img src="img/GH.png" class="sm" alt="">
@@ -129,7 +128,7 @@
 				<img src="img/LN.png" class="sm" alt="">
 			</a>
 		</section>
-		
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="js/scripts.js"></script>
 <!------------------------------------------------------------------------------end of script-->
 	</body>
