finished contact form and snap img

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta content="IE=edge" http-equiv="X-UA-Compatible">
 		<meta content="width=device-width, initial-scale=1" name="viewport"><!--for future reference andrew, put all other items in the head under these 3 tags for optimization. Also put scripts in the script section below the footer.-->
 		<title>Andrew Waller</title>
-		<link rel="manifest" href="/manifest.json">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
 		<link href="css/font-awesome.min.css" rel="stylesheet">
@@ -101,23 +100,35 @@
 				<button class="btn btn-lg btn-black btn-contact awesome-text" id="myBtn">Click Here</button>
 			</div>
 			<div id="myModal" class="modal">
-			  <div class="modal-content">
-				<span class="close">&times;</span>
-				<form onsubmit="submitForm()" action="http://awalldrew2@gmail.com" name="login" method="post">
-					<label for="email">E-mail</label>
-					<input type="text"  name="email" value="JohnDoe@gmail.com">
-					<br>
-					<label for="phoneNumber">Phone Number</label>
-					<input type="text" class="miniInput" name="phoneNumber" value="" maxlength="3">
-					-
-					<input type="text" class="miniInput" name="phoneNumber" value="" maxlength="3">
-					-
-					<input type="text" class="miniInput02" name="phoneNumber" value="" maxlength="4">
-					<br>
-					<input type="submit" value"send to me">
-				</form>
-				<!--<iframe height="600" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none;background: rgba(210,210,155, .65);"  src="https://adrw4.wufoo.com/embed/zda38vg1x2uxns/"><a href="https://adrw4.wufoo.com/forms/zda38vg1x2uxns/"></a></iframe><div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;"><span class="notranslate"></span></div>
-				--></div>
+				<div class="modal-content">
+					<span class="close">&times;</span>
+					<form class="contact-form" onsubmit="submitForm()" action="https://formspree.io/awalldrew2@gmail.com" name="login" method="post">
+						<label for="name">Name</label>
+						<br>
+						<input type="text" class="input-for-name" name="name" placeholder="John">
+						<input type="text" class="input-for-name" name="name" placeholder="Smith">
+						<br>
+						<label for="email">E-mail</label>
+						<br>
+						<input type="text"  name="email" value="" placeholder="JohnSmith01@gmail.com">
+						<br>
+						<label for="phoneNumber">Phone Number</label>
+						<br>
+						(
+						<input type="text" class="miniInput" name="phoneNumber" value="" maxlength="3" placeholder="559">
+						)
+						-
+						<input type="text" class="miniInput" name="phoneNumber" value="" maxlength="3" placeholder="555">
+						-
+						<input type="text" class="miniInput02" name="phoneNumber" value="" maxlength="4" placeholder="1234">
+						<br>
+						<label for="inquiries">Inquiries</label>
+						<br>
+						<textarea name="inquiries" rows="5" cols="20" placeholder="Type here..."></textarea>
+						<br>
+						<input class="btn-black awesome-text" type="submit" value"send to me">
+					</form>
+				</div>
 			</div>
 		</section>
 		<section class="social-media">
@@ -128,7 +139,7 @@
 				<img src="img/IG.png" class="sm" alt=""/>
 			</a>
 			<a>
-				<img src="img/SC.png" class="sm" id="snapchatLogo" onclick="snapchatPngFlip()" alt="">
+				<img src="img/SC.png" class="sm" id="snapchatLogo" onclick="timeout()" alt="">
 			</a>
 			<a href="https://github.com/AndrewWaller" class="contact-logos" target="_blank">
 				<img src="img/GH.png" class="sm" alt="">
@@ -137,7 +148,6 @@
 				<img src="img/LN.png" class="sm" alt="">
 			</a>
 		</section>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>	
 		<script type="text/javascript" src="js/scripts.js"></script>
 <!------------------------------------------------------------------------------end of script-->
 	</body>
